--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
    
+    <footer>
+     <a href="#" target="_blank">Timezone App</a>  coded by Rosie Carr
+    </footer>
    
     <script src="src/index.js"></script>
   </body>
