added link to github repo

--- a/index.html
+++ b/index.html
@@ -7,15 +7,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
-  </head>
+
     <title>RC Timezone</title>
   </head>
   <body>
-   
+    <h1>World Clocks</h1>
+
     <footer>
-     <a href="#" target="_blank">Timezone App</a>  coded by Rosie Carr
+      <a
+        href="https://github.com/RCCarr/rc-plus-time-zone-dropdown"
+        target="_blank"
+      >
+        Timezone App</a
+      >
+      coded by Rosie Carr
     </footer>
-   
+
     <script src="src/index.js"></script>
   </body>
 </html>
