--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     <title>RC Timezone</title>
   </head>
   <body>
-    <h1>World Clocks</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">Helsinki</option>
+        <option value="">Ottawa</option>
+        <option value="">Wellington</option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">15th August 2023</div>
+        <div class="time">1:48:18 AM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">15th August 2023</div>
+        <div class="time">1:48:18 AM</div>
+      </div>
+    </div>
 
     <footer>
       <a
