styled with css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1>🌍 World Clock ⏰</h1>
 
       <select>
         <option value="">Select a city...</option>
@@ -23,14 +23,18 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">15th August 2023</div>
-        <div class="time">1:48:18 AM</div>
+        <div>
+          <h2>Birmingham 🏴󠁧󠁢󠁥󠁮󠁧󠁿</h2>
+          <div class="date">15th August 2023</div>
+        </div>
+        <div class="time">1:48:18 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">15th August 2023</div>
-        <div class="time">1:48:18 AM</div>
+        <div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date">15th August 2023</div>
+        </div>
+        <div class="time">1:48:18 <small>AM</small></div>
       </div>
     </div>
 
@@ -38,10 +42,11 @@
       <a
         href="https://github.com/RCCarr/rc-plus-time-zone-dropdown"
         target="_blank"
+        class="footer-link"
       >
         Timezone App</a
       >
-      coded by Rosie Carr
+      coded by <strong>Rosie Carr</strong>
     </footer>
 
     <script src="src/index.js"></script>
