added live time data in js

--- a/index.html
+++ b/index.html
@@ -22,19 +22,26 @@
         <option value="">Wellington</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="dublin">
         <div>
-          <h2>Birmingham 🏴󠁧󠁢󠁥󠁮󠁧󠁿</h2>
-          <div class="date">15th August 2023</div>
+          <h2>Dublin 🇮🇪</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:18 <small>AM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="paris">
         <div>
           <h2>Paris 🇫🇷</h2>
-          <div class="date">15th August 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:18 <small>AM</small></div>
+        <div class="time"></div>
+      </div>
+      <div class="city" id="fiji">
+        <div>
+          <h2>Fiji 🇫🇯</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
       </div>
     </div>
 
