when select updated new timezone displayed

--- a/index.html
+++ b/index.html
@@ -14,34 +14,36 @@
     <div class="container">
       <h1>🌍 World Clock ⏰</h1>
 
-      <select>
+      <select id="city">
         <option value="">Select a city...</option>
-        <option value="">London</option>
-        <option value="">Helsinki</option>
-        <option value="">Ottawa</option>
-        <option value="">Wellington</option>
+        <option value="Europe/London">London 🏴󠁧󠁢󠁥󠁮󠁧󠁿</option>
+        <option value="Europe/Helsinki">Helsinki 🇫🇮</option>
+        <option value="America/Havana">Havana 🇨🇺</option>
+        <option value="Aurope/Budapest">Budapest 🇭🇺</option>
       </select>
 
-      <div class="city" id="dublin">
-        <div>
-          <h2>Dublin 🇮🇪</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="dublin">
+          <div>
+            <h2>Dublin 🇮🇪</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris 🇫🇷</h2>
-          <div class="date"></div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris 🇫🇷</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="fiji">
-        <div>
-          <h2>Fiji 🇫🇯</h2>
-          <div class="date"></div>
+        <div class="city" id="fiji">
+          <div>
+            <h2>Fiji 🇫🇯</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
 
