added current location

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
       <select id="city">
         <option value="">Select a city...</option>
-        <option value="Europe/London">London 🏴󠁧󠁢󠁥󠁮󠁧󠁿</option>
+        <option value="current">My current location</option>
+        <option value="Atlantic/Reykjavik">Reykjavik 🇮🇸</option>
         <option value="Europe/Helsinki">Helsinki 🇫🇮</option>
         <option value="America/Havana">Havana 🇨🇺</option>
         <option value="Aurope/Budapest">Budapest 🇭🇺</option>
