updating homepage link

--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
           </div>
           <div class="time"></div>
         </div>
-      
       </div>
     </div>
 
     <footer>
       <a
         href="https://github.com/RCCarr/rc-plus-time-zone-dropdown"
-        target="_blank"
+        target=""
         class="footer-link"
       >
         Timezone App</a
