bug in homepage link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <footer>
       <a
         href="https://github.com/RCCarr/rc-plus-time-zone-dropdown"
-        target=""
+        target="_blank"
         class="footer-link"
       >
         Timezone App</a
